[package]
name = "rust_sync_mongo"
version = "0.1.0"
authors = ["basalt79 <aigner.georg.79@gmail.com>"]
edition = "2018"

[dependencies]
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
bson = "1.1.0"
mongodb = {version = "1.1.1", features = ["sync"], default-features = false}


